syntax = "proto3";

package Need4Protocol;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "protos/Action.proto";
import "protos/Item.proto";

service TradeService {
	rpc CreateTrade (Trade) returns (ActionResponse);
	rpc GetOpenTrades (google.protobuf.Empty) returns (TradeList);
	rpc GetDetailedTradeView (google.protobuf.Int32Value) returns (Trade);
	rpc GetTradeActions (TradeActionRequest) returns (TradeActionResponse);
}

message TradeActionRequest {
	int32 trade_id = 1;
	int32 user_id = 2;
}

message TradeActionResponse {
	repeated ActionDetails actions = 1;
}


message TradeList {
	repeated Trade Trades = 1;
}

message Trade {
	int32 id = 1;
    string time_started = 2;
	TradeItemList TradeItemList = 3;
}

message TradeItemList {
	int32 id = 1;
	repeated TradeItemDetails TradeItemDetails = 2;
}

message TradeItemDetails {
	int32 id = 1;
	Item item = 2;
	int32 need_offset = 3;
	int32 fulfilled_quantity = 4;
}

